  people interested in reading PDB files is to use ESBTL
  (http://esbtl.sourceforge.net/).

----------------------------- Release 3.6.1 --------------------------------
CGAL 3.6.1 is a bug-fixes release. The following has been changed
since CGAL-3.6:

1. General

  - Fix compilation errors with recent Boost versions (since 1.40).


2. Polynomial

  - Fix compilation errors with the Microsoft Visual C++ compiler and the
    Intel C++ compiler.


3. Polyhedron

  - Fix a compilation errors in demo/Polyhedron/:
     - issue with the location of qglobal.h of Qt4 on MacOS X,
     - missing texture.cpp, if TAUCS is used,
  - Fix the location of built plugins of demo/Polyhedron/, when CGAL is
    configured with WITH_demos=ON


4. 3D Periodic Triangulations

  - Fixed bug in the triangulation hierarchy for periodic triangulations.


5. 2D Mesh Generation

  - Fix a bug that lead to precondition violation.
  - Improve the user manual about the member function is_in_domain() of the
    Face type.
  - The 2D meshing process is now deterministic (sorting of bad faces no
    longer relies on pointers comparisons).


6. 3D Mesh Generation

  - Fix a linking errors (duplicate symbols) when <CGAL/refine_mesh_3.h> is
    included in different compilation units.


7. Spatial Searching

  - Fix a bug in <CGAL/Orthogonal_k_neighbor_search.h> when several
    nearest neighbors are at the same distance from the query point.

8. IO Streams

  - Fix a bug in <CGAL/IO/VRML_2_ostream.h> that generated VRML 2 files with
    an invalid syntax for IndexedFaceSet nodes.

----------------------------- Release 3.6 ----------------------------------

CGAL 3.6 offers the following improvements and new functionality : 

1 General

  - Boost version 1.34.1 at least is now required.


2 Geometry Kernels

2.1 2D and 3D Geometry Kernel

  - Add new do_intersect() and intersection() overloads:
    + do_intersect(Bbox_3, Bbox_3/Line_3/Ray_3/Segment_3)