@@ -35,6 +35,11 @@ since CGAL-3.6:
 
   - Fix compilation errors with recent Boost versions (since 1.40).
 
+  - Initial support for the Microsoft Visual C++ compiler 10.0 (VC10). For
+    that support, CMake>=2.8.2 is required. At the time CGAL-3.6.1 was
+    released, CMake-2.8.2 was not yet released, but CMake-2.8.2rc1 was
+    published by Kitware at http://www.cmake.org/files/v2.8/
+
 
 2. Polynomial
 
